# Rust-In-Pieces

./: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  LCT.md  LICENSE  MinMaxOptimizeTask.md  README.md  agents.md  benchmark.txt  buildAllVersions.sh  build_and_release.sh  eval_task.md  eval_test.py  eval_test2.py  nps_test.py  perft.md  runAlsoIgnoredTests.sh  run_bench.py  run_det.py  run_engine.py  run_engine2.py  run_engine3.py  run_engine4.py  run_engine5.py  run_engine6.py  run_engine7.py  run_engine8.py  run_engine_eval.py  search_task.md  task.md  tests.rs
scratch/: analyze_lmr.py  analyze_logs.py  analyze_matchups.py  eval_diff.txt  extract_params.py  isolate_regression.py  test_state_carryover.py
scripts/: apply_spsa.py  check_spsa_status.py  lct2_evaluator.py  run_perft_bench.py
skills/: code_quality_and_performance_audit.md  engine_position_debugging.md  engine_release_procedure.md  eval_improvement_procedure.md  lct2_evaluation_procedure.md  spsa_harvest_results.md  spsa_parameter_update.md  spsa_tuning_status.md  task_management_procedure.md
src/: .gitignore  bin_test.rs  board.rs  book.rs  callgrind.out  callgrind.sh  config.rs  copy-to-engines.sh  eval.rs  eval_service.rs  fen_service.rs  game_handler.rs  global_map_handler.rs  magic.rs  main.rs  model.rs  move_gen_service.rs  notation_util.rs  opening.rs  pawn_hash.rs  polyglot.rs  pst.rs  search.rs  search_alphabeta.rs  search_basic.rs  search_new.rs  search_service.rs  search_zobrist.rs  service.rs  stats.rs  stdout_wrapper.rs  testgame.txt  threads.rs  time_check.rs  turn.rs  unittest.sh  (+3 more)
(+20 files in other folders)
