[package]
name = "rust_in_pieces"
version = "1.0.0"
authors = ["Jan Lange"]
edition = "2021"

[[bin]]
name = "rust_in_pieces"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
lazy_static = "1.4.0"
rand = "0.8.4"

# tested some parallel sorting algos foromm rayon
#rayon = "1.8.0"
