[package]
name = "suprah"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
regex = "1.11.1"
rand = "0.8.5"
once_cell = "1.20.2"
chashmap = "2.2.2"
crossbeam-queue = "0.3.12"
rayon = "1.10.0"
